# openbis-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
openbis_utils/: bam_users.py  connection.py  sample_properties.py  vocabularies.py
scripts/: example_bam_users.py  test_connection.py
tests/: test_bam_users.py  test_connection.py  test_vocabularies.py
tutorials/: tuto_bam_users.py  tuto_sample_properties.py  tuto_sample_properties_tables.py
